--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: HemerkenGT
 Theme URI: http://underscores.me/
-Author: goblin themes
+Author: Goblin Themes
 Author URI: https://www.goblinthemes.com
 Description: a Wordpress Theme
 Version: 1.0.0
