--- a/style.css
+++ b/style.css
@@ -1024,6 +1024,120 @@ textarea {
 	line-height: 0.8;
   }
   
+  #featured-content {
+	position: relative;
+	margin-top: 25px;
+	margin-bottom: -4px;
+  }
+  
+  #featured-content .wp-post-image {
+	width: 100%;
+  }
+  
+  #featured-content .featured-large {
+	float: left;
+	width: 55%;
+	margin-bottom: 4px;
+  }
+  
+  #featured-content .featured-large .entry-title {
+	font-size: 28px;
+	line-height: 1.16;
+  }
+  
+  #featured-content .featured-small {
+	float: left;
+	width: 22.5%;
+	height: 218px;
+	overflow: hidden;
+	padding-left: 4px;
+	margin-bottom: 4px;
+  }
+  
+  #featured-content .featured-small .entry-title {
+	font-size: 16px;
+	line-height: 1.3;
+  }
+  
+  #featured-content .featured-small .gradient {
+	left: 4px;
+  }
+  
+  #featured-content .hentry {
+	position: relative;
+	line-height: 0.5;
+	-webkit-transition: 300ms ease-in-out;
+	transition: 300ms ease-in-out;
+	-webkit-backface-visibility: hidden;
+  }
+  
+  #featured-content .hentry:hover {
+	opacity: 0.9;
+  }
+  
+  #featured-content .hentry .entry-header {
+	display: none;
+	padding: 0 20px;
+	position: absolute;
+	bottom: 21px;
+	z-index: 10;
+  }
+  
+  #featured-content .hentry .entry-title a,
+  #featured-content .hentry .entry-title a:visited {
+	color: #fff;
+  }
+  
+  #featured-content .hentry .entry-title a:hover {
+	text-decoration: none;
+  }
+  
+  #featured-content .hentry .entry-category {
+	margin-bottom: 10px;
+	letter-spacing: 0.03em;
+  }
+  
+  #featured-content .hentry .entry-category a {
+	background-color: rgba(50, 50, 50, 0.6);
+	border-radius: 2px;
+	color: #fff;
+	display: inline-block;
+	font-size: 11px;
+	padding: 7px 7px;
+	text-transform: uppercase;
+	transition: 300ms ease-in-out;
+  }
+  
+  #featured-content .hentry .entry-meta {
+	color: rgba(255, 255, 255, 0.6);
+	margin-top: 10px;
+  }
+  
+  #featured-content .hentry .entry-meta a,
+  #featured-content .hentry .entry-meta a:visited {
+	color: rgba(255, 255, 255, 0.6);
+  }
+  
+  #featured-content .hentry .entry-meta a:hover {
+	color: #fff;
+	text-decoration: none;
+  }
+  
+  #featured-content .hentry .entry-meta .entry-date:before {
+	content: "\f303";
+	display: inline-block;
+	font-family: "genericons";
+	font-size: 16px;
+	position: relative;
+	padding-right: 3px;
+	top: 4px;
+	left: -1px;
+  }
+  
+  #featured-content .hentry .gradient {
+	display: none;
+  }
+  
   .content-block {
 	width: 100%;
 	margin-bottom: 25px;
